# Nginx-Cloudflare-Access-JWT-Validator

./: .dockerignore  Cargo.toml  Dockerfile  GITHUB_ACTIONS.md  README.md  docker-compose.yml
.github/: dependabot.yml
.github/workflows/: ci.yml  docker.yml
src/: main.rs
